# ChangeLog for media-video/subliminal
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/subliminal/ChangeLog,v 1.3 2013/12/15 09:20:50 maksbotan Exp $

*subliminal-0.7.3 (15 Dec 2013)

  15 Dec 2013; Maxim Koltsov <maksbotan@gentoo.org> +subliminal-0.7.3.ebuild,
  subliminal-9999.ebuild:
  Bump to 0.7.3, update live ebuild, bug #493524. Thanks to Nikoli.

  13 Oct 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Updated Nikoli's e-mail address for easier automatic assignment.

*subliminal-0.6.3 (24 Apr 2013)
*subliminal-9999 (24 Apr 2013)

  24 Apr 2013; Maxim Koltsov <maksbotan@gentoo.org> +metadata.xml,
  +subliminal-0.6.3.ebuild, +subliminal-9999.ebuild:
  Add media-video/subliminal, bug #449654. Thanks to Nikoli.