@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/subliminal/subliminal-9999.ebuild,v 1.2 2013/12/15 09:20:50 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/subliminal/subliminal-9999.ebuild,v 1.3 2014/03/14 15:02:03 maksbotan Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python2_7 )
@@ -23,7 +23,7 @@ RDEPEND="
 	>=dev-python/enzyme-0.4[${PYTHON_USEDEP}]
 	>=dev-python/html5lib-0.99[${PYTHON_USEDEP}]
 	>=dev-python/dogpile-cache-0.5.2[${PYTHON_USEDEP}]
-	>=dev-python/babelfish-0.4.0[${PYTHON_USEDEP}]
+	>=dev-python/babelfish-0.5.0[${PYTHON_USEDEP}]
 	>=dev-python/charade-1.0.3[${PYTHON_USEDEP}]
 	>=dev-python/pysrt-0.5.0[${PYTHON_USEDEP}]
 	virtual/python-argparse[${PYTHON_USEDEP}]
