@@ -1,6 +1,11 @@
 # ChangeLog for media-video/subliminal
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/subliminal/ChangeLog,v 1.3 2013/12/15 09:20:50 maksbotan Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/subliminal/ChangeLog,v 1.4 2014/03/14 15:02:03 maksbotan Exp $
+
+  14 Mar 2014; Maxim Koltsov <maksbotan@gentoo.org> subliminal-0.7.3.ebuild,
+  subliminal-9999.ebuild:
+  Subliminal 0.7.3 does not support >=babelfish-0.5, while subliminal 9999
+  (future 0.8) requires it. Update dependencies.
 
 *subliminal-0.7.3 (15 Dec 2013)
 
